fix syntax errors in portal.css/less

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1458,6 +1458,7 @@ div.input-group.date {
 @media (max-width: 1300px) {
  #fullSizeBox {
     height: 680px;
+  }
 }
 
 @media (min-width: 1400px) {
