--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1618,6 +1618,12 @@ div.input-group.date {
   }
 }
 
+@media (max-width: 1300px) {
+ #fullSizeBox {
+    height: 680px;
+  }
+}
+
 @media (min-width: 1400px) {
   html, body {
     width: 100%;
