add git repo version to GIL about page

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -6773,4 +6773,11 @@ figure.nav-overlay {
         padding-right: 0;
     }
 }
+#repoVersion {
+    position: relative;
+    top: -40px;
+    padding-right: 40px; 
+    display: none;
+    font-size: 0.86em;
+}
 /*# sourceMappingURL=app.css.map */
