--- a/portal/templates/gil/about.html
+++ b/portal/templates/gil/about.html
@@ -133,6 +133,7 @@
     <script>
         $(document).ready(function() {
             $("body").attr("class", "page-about theme--intro-light");
+            $("#repoVersion").show();
         });
     </script>
 {% endblock %}
