--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -6586,4 +6586,11 @@ figure.nav-overlay {
         padding-right: 0;
     }
 }
+#repoVersion {
+    position: relative;
+    top: -40px;
+    padding-right: 40px; 
+    display: none;
+    font-size: 0.86em;
+}
 /*# sourceMappingURL=app.css.map */
