--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -206,10 +206,23 @@
         </div>
       </div>
     </div>
+    <div id="session-warning-modal" class="modal fade">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content box-modal">
+          <div class="box-modal__inner"><a class="box-modal__close" type="button" data-dismiss="modal" aria-label="Close"></a>
+            <h4 class="box-modal__title">Session Expiration Warning</h4><p class="box-modal__copy">Your session will expire in approximately <span id="remaining-time"></span> seconds due to inactivity</p>
+          </div>
+           <div class="box-modal__footer">
+            <button id="log-out" class="button button--teal" type="button" data-dismiss="modal">Log Out</button>&nbsp;<button id="stay-logged-in" class="button button--teal" type="button" data-dismiss="modal">Stay Logged In</button>
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
 {% block init_scripts %}
-    <script src="{{url_for('static', filename='js/vendor.js') }}"></script>
-    <script src="{{url_for('static', filename='js/gil.js') }}"></script>
+    <script src="{{PORTAL}}{{url_for('static', filename='js/vendor.js') }}"></script>
+    <script src="{{PORTAL}}{{url_for('static', filename='js/gil.js') }}"></script>
+    <script src="{{PORTAL}}{{ url_for('static', filename='js/tnth.js') }}"></script>
     {% if config.PIWIK_SITEID %}
         <script type="text/javascript">
             var _paq = _paq || [];
@@ -235,6 +248,37 @@
         <noscript><p><img src="//piwik.cirg.washington.edu/piwik.php?idsite={{ config.PIWIK_SITEID }}" style="border:0;" alt="" /></p></noscript>
       {% endif %}
       <script>
+          function _readCookie(name) {
+            var nameEQ = name + "=";
+            var ca = document.cookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+            };
+            return null;
+          };
+          var sessionMonitor=function(a){"use strict";function b(a){a&&a.stopPropagation();var b=new Date,c=b-j;a&&a.target&&"stay-logged-in"==a.target.id?(j=b,d(),a=null,i.ping()):c>i.minPingInterval&&(j=b,d(),i.ping())}function c(){d(),i.ping()}function d(){var a=i.sessionLifetime-i.timeBeforeWarning;window.clearTimeout(f),window.clearTimeout(g),f=window.setTimeout(i.onwarning,a),g=window.setTimeout(e,i.sessionLifetime)}function e(){$.when(i.onbeforetimeout()).always(i.ontimeout)}var f,g,h={sessionLifetime:36e5,timeBeforeWarning:6e5,minPingInterval:6e4,activityEvents:"mouseup",pingUrl:window.location.protocol+"//"+window.location.host+"/api/ping",logoutUrl:"/logout",timeoutUrl:"/logout?timeout=1",ping:function(){$.ajax({type:"POST",contentType:"text/plain",cache:false,url:i.pingUrl,crossDomain:!0})},logout:function(){window.location.href=i.logoutUrl},onwarning:function(){var a=Math.round(i.timeBeforeWarning/60/1e3),b=$('<div id="jqsm-warning">Your session will expire in '+a+' minutes. <button id="jqsm-stay-logged-in">Stay Logged In</button><button id="jqsm-log-out">Log Out</button></div>');$("body").children("div#jqsm-warning").length||$("body").prepend(b),$("div#jqsm-warning").show(),$("button#stay-logged-in").on("click",function(a){a&&a.stopPropagation(),i.extendsess(a)}).on("click",function(){b.hide()}),$("button#jqsm-log-out").on("click",i.logout)},onbeforetimeout:function(){},ontimeout:function(){window.location.href=i.timeoutUrl}},i={},j=new Date;return $.extend(i,h,a,{extendsess:b}),$(document).on(i.activityEvents,b),c(),i};
+
+          var truenth_authenticated = {% if user %} true;{% else %} false;{% endif %}
+          // Set default sessionLifetime from Flask config
+          // Subtract 10 seconds to ensure the backend doesn't expire the session first
+          var CONFIG_SESSION_LIFETIME, DEFAULT_SESSION_LIFETIME;
+          var cookieTimeout = _readCookie("SS_TIMEOUT");
+          cookieTimeout = cookieTimeout ? parseInt(cookieTimeout) : null;
+
+          if (cookieTimeout && cookieTimeout > 0) {
+              DEFAULT_SESSION_LIFETIME = (cookieTimeout * 1000) - (cookieTimeout > 10 ? (10 * 1000) : 0);
+          } else {
+              try {
+                  CONFIG_SESSION_LIFETIME = {% if config.PERMANENT_SESSION_LIFETIME %} {{config.PERMANENT_SESSION_LIFETIME}} {% else %} "" {% endif %};
+                  if (!CONFIG_SESSION_LIFETIME || CONFIG_SESSION_LIFETIME === "") CONFIG_SESSION_LIFETIME = 15 * 60;
+                  DEFAULT_SESSION_LIFETIME = (CONFIG_SESSION_LIFETIME * 1000) - (CONFIG_SESSION_LIFETIME > 10 ? (10 * 1000) : 0);
+              } catch(e) {
+                  DEFAULT_SESSION_LIFETIME = (15 * 60 * 1000) - (10 * 1000);
+              };
+          };
+
           var loader = function(show) {
               if (show) {
                   $("#loadingIndicator").show();
@@ -243,6 +287,7 @@
                   setTimeout('$("#loadingIndicator").fadeOut();', 200);
               };
           };
+
           function showMain() {
             $("#mainHolder").css({
                           "visibility" : "visible",
@@ -256,9 +301,32 @@
           };
 
          $(document).ready(function(){
+
+            // Configure and start the session timeout monitor
+            {% if user %}
+                var sessMon = sessionMonitor({
+                      sessionLifetime: DEFAULT_SESSION_LIFETIME,
+                      timeBeforeWarning: 1 * 60 * 1000,
+                      minPingInterval: 1 * 60 * 1000,  // 1 minute
+                      activityEvents: "mouseup",
+                      pingUrl: '{{PORTAL}}/api/ping',
+                      logoutUrl: '{{PORTAL}}/logout',
+                      timeoutUrl: '{{PORTAL}}/logout?timed_out=1',
+                      onwarning: function() {$("#session-warning-modal").modal("show");}
+                });
+                window.sessMon = sessMon;
+                 // Configure the session timeout warning modal
+                $("#session-warning-modal").modal({"backdrop": false,"keyboard": false,"show": false})
+                        .on("click", "#stay-logged-in", sessMon.extendsess)
+                        .on("click", "#log-out", sessMon.logout)
+                        .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
+             {% endif %}
+
+
+
             $("li.side-nav-items__item a, a.icon-box__button--main, li.nav-list__item a").not("[data-toggle='modal']").on("click", function(e) {
-              e.stopPropagation();
-              loader(true);
+                e.stopPropagation();
+                loader(true);
             });
             setTimeout("loader(false);", 0);
           });
