--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -836,9 +836,11 @@
         };
         $(function () {
             $("#patientQ").show();
+            $("#patTx").remove();
+
             $("#patientQ hr").hide();
             {% if person and current_user and person.id != current_user.id %}
-                $("#patientQ input[type='radio'], #treatmentDate, #treatmentMonth, #treatmentYear").each(function() {
+                $("#patientQ input[type='radio']").each(function() {
                     $(this).attr("disabled", "disabled");
                 });
             {% endif %}
@@ -849,13 +851,13 @@
                       var toCall = thisItem.attr("name")
                       // Get value from div - either true or false
                       var toSend = thisItem.val();
-                      if (toCall != "tx") tnthAjax.putClinical({{person.id}},toCall,toSend, $(this));
+                      tnthAjax.putClinical({{person.id}},toCall,toSend, $(this));
 
                       if (toSend == "true" || toCall ==  "pca_localized") {
                         thisItem.parents(".pat-q").nextAll().fadeIn();
                       } else {
                         if (toCall == "biopsy") {
-                            ["pca_diag", "pca_localized", "tx"].forEach(function(fieldName) {
+                            ["pca_diag", "pca_localized"].forEach(function(fieldName) {
                                 $("input[name='" + fieldName + "']").each(function() {
                                     $(this).prop("checked", false);
                                 });
@@ -866,20 +868,14 @@
                             if ($("input[name='pca_localized']").length > 0) {
                                 tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
                             };
-                            if ($("input[name='tx']").length > 0) {
-                                tnthAjax.deleteTreatment({{person.id}}, $(this));
-                            };
                         } else if (toCall == "pca_diag") {
-                            ["pca_localized", "tx"].forEach(function(fieldName) {
+                            ["pca_localized"].forEach(function(fieldName) {
                               $("input[name='" + fieldName + "']").each(function() {
                                   $(this).prop("checked", false);
                               });
                             });
                             if ($("input[name='pca_localized']").length > 0) {
                                 tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
-                            };
-                            if ($("input[name='tx]").length > 0) {
-                                tnthAjax.deleteTreatment({{person.id}}, $(this));
                             };
                         }
                         thisItem.parents(".pat-q").nextAll().fadeOut();
@@ -898,11 +894,8 @@
             {
                 "fields": $("#patientQ input[name='pca_localized']"),
                 "containerId": "patMeta"
-            },
-            {
-                "fields": $("#patientQ input[name='tx']"),
-                "containerId": "patientQContainer"
-            }].forEach( function(item) {
+            }
+            ].forEach( function(item) {
                 item.fields.each(function() {
                      getSaveLoaderDiv("profileForm", item.containerId);
                     $(this).attr("save-container-id", item.containerId);
