fix links on GIL pages not working on IOS devices issue

--- a/portal/templates/gil/decision-support.html
+++ b/portal/templates/gil/decision-support.html
@@ -6,7 +6,7 @@
         <div class="page-intro__content">
           <h1 class="page-intro__main">Decision Support</h1>
           <p class="page-intro__sub">Choosing which treatment path to go down can be confusing and overwhelming. Being informed of the different options and how each fits into your life is critical in making the best choice for you.</p>
-          <div class="button-callout button-callout--has-text">{% if not user %}<a class="button--teal icon-box__button icon-box__button--main" data-toggle="modal" data-target="#modal-register"><span>Start<figure></figure></span></a>{% endif %}<strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
+          <div class="button-callout button-callout--has-text">{% if not user %}<a href="#" class="button--teal icon-box__button icon-box__button--main" data-toggle="modal" data-target="#modal-register"><span>Start<figure></figure></span></a>{% endif %}<strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
             <figure class="button-callout__scroll js-scroll-down" data-target=".page-intro"></figure>
           </div>
         </div>
