--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -26,7 +26,7 @@
               <figure class="photo-grid__item"><strong>David Perez</strong><img class="photo-grid__img" src="{{url_for('static', filename='img/Home-People-David.jpg') }}"><img class="photo-grid__img--hovered" src="{{url_for('static', filename='img/Home-People-David-Over.jpg') }}"></figure>
             </div>
           </div>
-          <div class="button-callout"><a class="button button--large button--teal" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
+          <div class="button-callout"><a href="#" class="button button--large button--teal" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
         </div>
       </div>
       <div class="module-wrap module-wrap--watch js-video-toggle" data-iframe-src="//videos.sproutvideo.com/embed/e89bd1bd181ae4cf60/1e7fa0493e528f7c?type=hd&amp;playerColor=2f3437&amp;autoPlay=true"><img src="{{url_for('static', filename='img/Home-Video-Export.jpg') }}">
