--- a/portal/templates/gil/symptom-tracker.html
+++ b/portal/templates/gil/symptom-tracker.html
@@ -6,7 +6,7 @@
         <div class="page-intro__content">
           <h1 class="page-intro__main">Symptom Tracker</h1>
           <p class="page-intro__sub">Track your symptoms to see how they are changing over time, and how they compare to other men with prostate cancer.</p>
-          <div class="button-callout">{% if not user %}<a class="button--teal icon-box__button icon-box__button--main" data-toggle="modal" data-target="#modal-register"><span>Start<figure></figure></span></a>{% endif %}<strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
+          <div class="button-callout">{% if not user %}<a href="#" class="button--teal icon-box__button icon-box__button--main" data-toggle="modal" data-target="#modal-register"><span>Start<figure></figure></span></a>{% endif %}<strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
             <figure class="js-scroll-down" data-target=".page-intro"></figure>
           </div>
         </div>
