--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -58,7 +58,7 @@
                 </div>
               </div>
               <div class="field-group">
-                <div id="submitButton" class="button-wrap button-wrap--centered"><a class="icon-box__button icon-box__button--main"><span>Submit<figure></figure></span></a></div>
+                <div class="button-wrap button-wrap--centered"><a id="submitButton" class="icon-box__button icon-box__button--main"><span>Submit<figure></figure></span></a></div>
               </div>
             </form>
           </div>
