add modal for the presence of redirect_uri request parameter for GIL home page

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -206,6 +206,21 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" id="modal-login-register">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content box-modal">
+          <div class="box-modal__inner"><a class="box-modal__close" type="button" data-dismiss="modal" aria-label="Close"></a>
+            <h3 class="box-modal__title">Login</h3>
+            <a href="{{PORTAL}}/user/sign-in" class="button button-large button--teal">Login</a>
+            <br/><br/>
+            <p class="box-modal__copy"><em>or</em></p>
+            <div class="box-modal__divider"></div>
+            <h3 class="box-modal__title">Join Us!</h3>
+            <p class="box-modal__copy">It’s going to take a group effort to improve the prostate cancer experience for future generations.</p><a href="{{PORTAL}}/go" class="button button-large button--teal">Create Account</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="session-warning-modal" class="modal fade">
       <div class="modal-dialog" role="document">
         <div class="modal-content box-modal">
