refactor patients_by_org.html to update assessment status and consent date fields via ajax

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -292,7 +292,8 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 }
 
 #patientAssessmentDownload {
-  padding: 0.6em;
+  padding: 0.65em;
+  font-size: 1em;
 }
 
 #patientsInstrumentList div.checkbox label {
